...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_normal_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nid_editText_normal_hint"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:id="@+id/textIl_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nid_editText_password_hint"
                        android:inputType="numberPassword"
                        android:maxLength="10" />

...
