...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_main_button_show_activity_non_automatic_events"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show_activity_one_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_main_button_show_activity_one_fragment"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show_activity_fragments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nid_main_button_show_activity_fragments"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
...
