<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/layout_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nid_only_one_fragment_checkboxes" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_first_check" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_second_check" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_third_check" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_fourth_check" />

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nid_only_one_fragment_radiobuttons" />

                <RadioGroup
                    android:id="@+id/radioGroup_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp">

                    <RadioButton
                        android:id="@+id/radioButton_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nid_only_one_fragment_first_radio" />

                    <RadioButton
                        android:id="@+id/radioButton_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nid_only_one_fragment_second_radio" />

                    <RadioButton
                        android:id="@+id/radioButton_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nid_only_one_fragment_third_radio" />
                </RadioGroup>

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nid_only_one_fragment_switches" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_first_switch"
                    app:switchPadding="10dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_second_switch"
                    app:switchPadding="10dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/nid_only_one_fragment_third_switch"
                    app:switchPadding="10dp" />

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nid_only_one_fragment_toggle_button" />

                <ToggleButton
                    android:id="@+id/toggle_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp" />

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nid_only_one_fragment_rating_bar" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:max="100" />

                <TextView
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/nid_only_one_fragment_seekbar" />

                <SeekBar
                    android:id="@+id/seekBar_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:max="100" />

                <TextView
                    android:id="@+id/tvEmptyButton"
                    style="@style/NidTextViewSubTitleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>